// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName4",
    "lastUpdateModeApid": 1,
    "lastUpdateTimeApid": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 200,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName2",
    "lastUpdateModeApid": 3,
    "lastUpdateTimeApid": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 0,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 5,
  "groundDate": 1518791878584,
  "payload": Object {
    "executionTimeFirstTc": "2018-02-16T14:37:58.584",
    "lastUpdateModeExecTimeFirstTc": 3,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeSubScheduleId": 2,
    "lastUpdateTimeExecTimeFirstTc": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubscheduleId": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "ssIdLabel": "ssid1",
    "status": 2,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 3,
  "groundDate": 1518791878584,
  "payload": Object {
    "commandBinaryProfile": "33356c87855f833356c87855f833356c87855f833356c87855f8",
    "commandGroundStatus": "6",
    "commandName": "Command3",
    "commandStatus": 1,
    "currentExecutionTime": "2018-02-16T14:37:58.584",
    "initialExecutionTime": "2018-02-16T14:37:58.584",
    "lastUpdateModeBinProf": 1,
    "lastUpdateModeCommandId": 1,
    "lastUpdateModeCurrentExecTime": 1,
    "lastUpdateModeGroundStatus": 2,
    "lastUpdateModeInitialExecTime": 2,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeTotalTimeShiftOffset": 3,
    "lastUpdateTimeBinProf": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCommandId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCurrentExecTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeGroundStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeInitialExecTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTotalTimeShiftOffset": "2018-02-16T14:37:58.584",
    "pus011CommandParameters": Array [
      Object {
        "lastUpdateMode": 3,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
      Object {
        "lastUpdateMode": 1,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
    ],
    "pus011TimeShift": Array [
      Object {
        "applicationTime": "2018-02-16T14:37:58.584",
        "lastUpdateMode": 1,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
      Object {
        "applicationTime": "2018-02-16T14:37:58.584",
        "lastUpdateMode": 1,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "uniqueId": "1",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "2",
    "isMonitoringIntervalSet": false,
    "isRepetitionNumberSet": false,
    "lastUpdateModeCheckType": 1,
    "lastUpdateModeMonId": 3,
    "lastUpdateModeMonInterval": 1,
    "lastUpdateModeMonStatus": 3,
    "lastUpdateModeParamId": 3,
    "lastUpdateModeProtectionStatus": 2,
    "lastUpdateModeRepetition": 1,
    "lastUpdateModeValParamExpectValue": 3,
    "lastUpdateModeValParamId": 1,
    "lastUpdateModeValParamMask": 1,
    "lastUpdateTimeCheckType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonInterval": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRepetition": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamMask": "2018-02-16T14:37:58.584",
    "monitoringStatus": 1,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 0,
      "lastUpdateModeActionStatus": 2,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 200,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 200,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 1,
      "lastUpdateModeValue": 2,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 2,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 2,
      "lastUpdateModeActionStatus": 2,
      "lastUpdateModeMask": 1,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 1,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 200,
    },
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "1",
    "isMonitoringIntervalSet": false,
    "isRepetitionNumberSet": false,
    "lastUpdateModeCheckType": 3,
    "lastUpdateModeMonId": 3,
    "lastUpdateModeMonInterval": 2,
    "lastUpdateModeMonStatus": 3,
    "lastUpdateModeParamId": 3,
    "lastUpdateModeProtectionStatus": 2,
    "lastUpdateModeRepetition": 1,
    "lastUpdateModeValParamExpectValue": 2,
    "lastUpdateModeValParamId": 1,
    "lastUpdateModeValParamMask": 2,
    "lastUpdateTimeCheckType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonInterval": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRepetition": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamMask": "2018-02-16T14:37:58.584",
    "monitoringStatus": 1,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 1,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 3,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 200,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 2,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 3,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 2,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 2,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 0,
    },
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 10,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 1,
    "lastUpdateModeFailureCode": 1,
    "lastUpdateModeFileChecksum": 3,
    "lastUpdateModeLduId": 3,
    "lastUpdateModePercent": 3,
    "lastUpdateModeRemainSize": 2,
    "lastUpdateModeSize": 2,
    "lastUpdateModeStartTime": 2,
    "lastUpdateModeStatus": 2,
    "lastUpdateTimeEndTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFailureCode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeLduId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePercent": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRemainSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStartTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "3",
      },
      Object {
        "status": "3",
      },
    ],
    "serviceApid": 2,
    "status": "4",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 10,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 2,
    "lastUpdateModeFailureCode": 1,
    "lastUpdateModeFileChecksum": 2,
    "lastUpdateModeLduId": 2,
    "lastUpdateModePercent": 2,
    "lastUpdateModeRemainSize": 2,
    "lastUpdateModeSize": 3,
    "lastUpdateModeStartTime": 3,
    "lastUpdateModeStatus": 1,
    "lastUpdateTimeEndTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFailureCode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeLduId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePercent": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRemainSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStartTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "2",
      },
      Object {
        "status": "1",
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "status": "9",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 1,
    "forwardingStatusTypeSubtype": 0,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 2,
    "lastUpdateModeRid": 1,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 3,
    "lastUpdateModeTypeSubType": 1,
    "lastUpdateTimeFwdStatusTypeRidSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTypeSubType": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 1,
    "forwardingStatusTypeSubtype": 200,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 2,
    "lastUpdateModeRid": 1,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 1,
    "lastUpdateModeTypeSubType": 1,
    "lastUpdateTimeFwdStatusTypeRidSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTypeSubType": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 0,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 1,
    "lastUpdateModeDownlinkStatus": 1,
    "lastUpdateModeStoreId": 1,
    "lastUpdateModeStoreStatus": 1,
    "lastUpdateModeStoreType": 1,
    "lastUpdateTimeDownlinkStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreType": "2018-02-16T14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 1,
        "lastUpdateModeSubSamplingRatio": 1,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
    ],
    "serviceApid": 2,
    "storeStatus": 0,
    "uniqueId": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 1,
    "lastUpdateModeDownlinkStatus": 1,
    "lastUpdateModeStoreId": 3,
    "lastUpdateModeStoreStatus": 3,
    "lastUpdateModeStoreType": 1,
    "lastUpdateTimeDownlinkStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreType": "2018-02-16T14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 3,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 3,
        "lastUpdateModeSubSamplingRatio": 1,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "storeStatus": 0,
    "uniqueId": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeObcpId": 3,
    "lastUpdateModeObsLevel": 2,
    "lastUpdateModePartitionId": 2,
    "lastUpdateModePriority": 2,
    "lastUpdateModeStatus": 2,
    "lastUpdateModeStepId": 3,
    "lastUpdateTimeObcpId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeObsLevel": "2018-02-16T14:37:58.584",
    "lastUpdateTimePartitionId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePriority": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStepId": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 0,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeObcpId": 3,
    "lastUpdateModeObsLevel": 2,
    "lastUpdateModePartitionId": 3,
    "lastUpdateModePriority": 2,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeStepId": 3,
    "lastUpdateTimeObcpId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeObsLevel": "2018-02-16T14:37:58.584",
    "lastUpdateTimePartitionId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePriority": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStepId": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 0,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 17,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 0,
    "actionTcPacket": "2d2e6da68969b2d2e6da68969b2d2e6da68969b2d2e6da68969b",
    "lastUpdateModeActionStatus": 1,
    "lastUpdateModeActionTc": 2,
    "lastUpdateModeEventActionRid": 3,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeActionTc": "2018-02-16T14:37:58.584",
    "lastUpdateTimeEventActionRid": "2018-02-16T14:37:58.584",
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 17,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 2,
    "actionTcPacket": "5a32129fe6ae55a32129fe6ae55a32129fe6ae55a32129fe6ae5",
    "lastUpdateModeActionStatus": 2,
    "lastUpdateModeActionTc": 3,
    "lastUpdateModeEventActionRid": 1,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeActionTc": "2018-02-16T14:37:58.584",
    "lastUpdateTimeEventActionRid": "2018-02-16T14:37:58.584",
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 1,
    "lastUpdateModeParamId": 2,
    "lastUpdateTimeCurrentValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 3,
    "lastUpdateModeParamId": 1,
    "lastUpdateTimeCurrentValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 22,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeServiceStatus": 1,
    "pus142FunctionalMonitoring": Array [
      Object {
        "actionStatus": 2,
        "checkingStatus": "3",
        "lastUpdateModeActionStatus": 2,
        "lastUpdateModeCheckingStatus": 1,
        "lastUpdateModeFMonId": 1,
        "lastUpdateModeProtectionStatus": 1,
        "lastUpdateModeRid": 3,
        "lastUpdateModeRidStatus": 2,
        "lastUpdateModeStatus": 2,
        "lastUpdateModeValidParamExpectedValue": 3,
        "lastUpdateModeValidParamId": 3,
        "lastUpdateModeValidParamMask": 3,
        "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeCheckingStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeFMonId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
        "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamExpectedValue": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamMask": "2018-02-16T14:37:58.584",
        "pus142ParameterMonitoringDefinition": Array [
          Object {
            "lastUpdateModeId": 2,
            "lastUpdateTimeId": "2018-02-16T14:37:58.584",
            "serviceApid": 2,
          },
          Object {
            "lastUpdateModeId": 3,
            "lastUpdateTimeId": "2018-02-16T14:37:58.584",
            "serviceApid": 2,
          },
        ],
        "ridStatus": 1,
        "serviceApid": 2,
        "status": 2,
      },
      Object {
        "actionStatus": 1,
        "checkingStatus": "2",
        "lastUpdateModeActionStatus": 2,
        "lastUpdateModeCheckingStatus": 2,
        "lastUpdateModeFMonId": 3,
        "lastUpdateModeProtectionStatus": 1,
        "lastUpdateModeRid": 2,
        "lastUpdateModeRidStatus": 3,
        "lastUpdateModeStatus": 2,
        "lastUpdateModeValidParamExpectedValue": 2,
        "lastUpdateModeValidParamId": 2,
        "lastUpdateModeValidParamMask": 1,
        "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeCheckingStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeFMonId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
        "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamExpectedValue": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeValidParamMask": "2018-02-16T14:37:58.584",
        "pus142ParameterMonitoringDefinition": Array [
          Object {
            "lastUpdateModeId": 1,
            "lastUpdateTimeId": "2018-02-16T14:37:58.584",
            "serviceApid": 2,
          },
          Object {
            "lastUpdateModeId": 3,
            "lastUpdateTimeId": "2018-02-16T14:37:58.584",
            "serviceApid": 2,
          },
        ],
        "ridStatus": 200,
        "serviceApid": 2,
        "status": 1,
      },
    ],
    "serviceStatus": 200,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 21,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 200,
    "checkingStatus": "2",
    "lastUpdateModeActionStatus": 1,
    "lastUpdateModeCheckingStatus": 3,
    "lastUpdateModeFMonId": 1,
    "lastUpdateModeProtectionStatus": 3,
    "lastUpdateModeRid": 2,
    "lastUpdateModeRidStatus": 1,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeValidParamExpectedValue": 1,
    "lastUpdateModeValidParamId": 1,
    "lastUpdateModeValidParamMask": 2,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCheckingStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamExpectedValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamMask": "2018-02-16T14:37:58.584",
    "pus142ParameterMonitoringDefinition": Array [
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "ridStatus": 0,
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "2",
    "fileProtectionStatus": "2",
    "isFileSizeSet": true,
    "lastUpdateModeComputedChecksum": 1,
    "lastUpdateModeFileAddress": 1,
    "lastUpdateModeFileCreationTime": 2,
    "lastUpdateModeFileMode": 2,
    "lastUpdateModeFileProtectionStatus": 2,
    "lastUpdateModeFileSize": 1,
    "lastUpdateModeFileType": 1,
    "lastUpdateModeOnBoardFileId": 3,
    "lastUpdateModeUploadedChecksum": 2,
    "lastUpdateTimeComputedChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileAddress": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileCreationTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileMode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "2",
    "fileProtectionStatus": "2",
    "isFileSizeSet": true,
    "lastUpdateModeComputedChecksum": 1,
    "lastUpdateModeFileAddress": 3,
    "lastUpdateModeFileCreationTime": 2,
    "lastUpdateModeFileMode": 3,
    "lastUpdateModeFileProtectionStatus": 2,
    "lastUpdateModeFileSize": 2,
    "lastUpdateModeFileType": 1,
    "lastUpdateModeOnBoardFileId": 2,
    "lastUpdateModeUploadedChecksum": 1,
    "lastUpdateTimeComputedChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileAddress": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileCreationTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileMode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2 should be true 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2,4 should be true 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: test serviceApid:  should be undefined 1`] = `undefined`;
